Created a new project section for DeepColors

--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
             A<span class="marker"> machine
               learning engineer</span> in the Vancouver area with more than <span class="marker">2 years of machine
               learning experience</span>.<br>
-            I am able to do from sourcing data to deployment for productions and always try to optimize each process by
+            I am able to do from sourcing data to <span class="marker">deployment for productions on the Cloud as well
+              as native apps</span> and always try to optimize each process by
             using appropriate metrics, algorithms, and data structures.<br>
 
             Actively <span class="marker">Looking for a fulltime job</span> as a machine learning engineer <span
@@ -154,11 +155,13 @@
           <li><span class="marker">Programming Laguage</span>:</li>Python (TensorFlow, PyTroch, Pandas, Numpy,
           Matplotlib, OpenCV, Sklearn, Jupyter
           Notebook, Tensorforce, SCipy,
-          Flask, unittest),<br> C/C++, SQL, Java, Bash
+          Flask, unittest),<br> Swift, SwiftUI, Kotlin, C/C++, SQL, Java, Bash
           <li><span class="marker">Machine Learning</span>: </li>Computer Vision, NLP, Signal Processing, Time Series,
           Reinforcement Learning, Classic machine learning
           <li><span class="marker">OS</span>: </li>Ubuntu, MacOS
-          <li><span class="marker">Others</span>: </li>AWS(EC2, DynamoDB, CloudWatch), Github, Docker, CircleCI, Scrum,
+          <li><span class="marker">Others</span>: </li>AWS(EC2, DynamoDB, CloudWatch), GCP, Github, Docker, CircleCI,
+          Apache,
+          Scrum,
           Agile, Algorithms and Data structures, Quantum computing (Dwave-Ocean-SDK)
         </ul>
         </p>
@@ -283,6 +286,98 @@
     <div class="w-100">
       <h2 class="mb-5">Projects</h2>
       <div class="row">
+        <!-- A project section start -->
+        <div class="col-sm-12 mb-2">
+          <div class="card">
+            <div class=" card-body">
+              <div class="resume-date text-md-right">
+                <span class="text-primary">Aug 2020 - Current</span>
+              </div>
+              <h3 class="card-title"><img src="img/DeepColors/logo_transparent.png" class="img-fluid"
+                  alt="Responsive image" width="50" height="50">DeepColors app for iOS&ensp;<a
+                  href="http://35.190.228.199/DeepColors/" target="_blank">Website</a>&ensp;<a
+                  href="https://apps.apple.com/us/app/deepcolors/id1540025064" target="_blank">
+                  <img src="img/DeepColors/Download_AppStoreBlack.png" class="img-fluid" alt="Responsive image" ,
+                    width="100" , height="100">
+                </a>
+              </h3>
+              <p class="card-text">
+              <h5>About this project</h5>
+              <span class="marker">A mobile app that helps users colorize sketches they have drawn and grayscale photos,
+                by using the power
+                of Deep Learning</span>.<br>
+              <div class="row">
+                <div class="column">
+                  <img src="img/DeepColors/devices_logo.png" class="img-fluid" alt="Responsive image" , width="400" ,
+                    height="300">
+                </div>
+                <div class="column">
+                  <img src="img/DeepColors/Appstore_ScreenShot_12.9_EN.001.jpeg" class="img-fluid"
+                    alt="Responsive image">
+                </div>
+                <div class="column">
+                  <img src="img/DeepColors/Appstore_ScreenShot_12.9_EN.002.jpeg" class="img-fluid"
+                    alt="Responsive image">
+                </div>
+              </div>
+              <br><br>
+              <h5>Demos</h5>
+              - Colorize sketches
+              <div class="row">
+                <div class="column">
+                  <img src="img/DeepColors/demoSketchConcat.png" class="img-fluid" alt="Responsive image" , width="400"
+                    , height="300">
+                </div>
+                <div class="column">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/I0_DtOK7t_A" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                </div>
+              </div>
+              <hr>
+              - Colorize grayscale photos
+              <div class="row">
+                <div class="column">
+                  <img src="img/DeepColors/demoPhotoConcat.png" class="img-fluid" alt="Responsive image" , width="400" ,
+                    height="300">
+                </div>
+                <div class="column">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/7Hi5IVlXDyo" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                </div>
+              </div>
+              <br>
+              <br>
+              <h5>Application outline</h5>
+              Took about 3 months from learning how to display "Hello world" in a View in SwiftUI.
+              <ul>
+                <li>Client Side</li>
+                Mainly used SwiftUI and Swift but SwiftUI is a new framework so I combined UIKit to help SwiftUI.
+                <hr>
+                <li>Machine Learning</li>
+                Reading a lot of papers to find what I can use in the app by considering the performance and the
+                processing speed.<br>
+                Trained GANs on datasets that I preprocessed on GCP by following their architectures and
+                hyperparameters.
+                <hr>
+                <li>Server Side</li>
+                Used Flask to receive POST requests from the client-side and to process the given data.<br>
+                Set up Apache on Ubuntu to handle concurrent requests.
+                <hr>
+                <li>Monetisation</li>
+                Set up Admob and created mediation groups to maximize the revenues.
+                Prepared in-app purchases as well. Currently, there is only one item that users can buy but I have been
+                working on some new features.
+              </ul>
+              <br>
+            </div>
+          </div>
+        </div>
+        <!-- A Project section done-->
+
+        <p>&ensp;</p>
+
         <!-- A project section start -->
         <div class="col-sm-12 mb-2">
           <div class="card">
@@ -981,7 +1076,8 @@
                   class="marker">created</span> this application <span class="marker">within a month</span>.
                 <img src="img/app_development_ticket_dodger.png" class="img-fluid" alt="Responsive image"><br>
                 We found dataset on <a href="https://data.vancouver.ca/datacatalogue/index.htm"
-                  target="_blank">Vancouver open data catalog</a>, the original dataset had the information of parking
+                  target="_blank">Vancouver
+                  open data catalog</a>, the original dataset had the information of parking
                 tickets issued such as date time, address including block, infraction, status, etc.
                 However the dataset obviously <span class="marker">did not have any target variable that we could
                   use</span> in our case the likelihood or probability
@@ -1013,7 +1109,8 @@
               </div>
               <h5>Training Machine Learning Models</h5>
               As I mentioned, this was a classification problem so we started from training a <span
-                class="marker">simple logistic
+                class="marker">simple
+                logistic
                 regresssion</span> because it was easy to implement.<br>
               Afterwords, we trained different kind of models such as <span class="marker">Random Forest</span>,
               <span class="marker">XGBoost</span>, and <span class="marker">Neural Networks</span>.
